--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <p><a href="recipes/banana-bread.html">Banana Bread</a></p>
-  </body>
+    <ul>
+    <li><a href="recipes/banana-bread.html">Banana Bread</a></li>
+    <li><a href="recipes/vegetable-soup.html">Vegetable Soup</a></li>
+    <li><a href="recipes/spicy-fried-chicken.html">Spicy Fried Chicken</a></li>
+  </ul>
+</body>
 </html>
