fix errors in files

--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -12,7 +12,7 @@
         Banana Bread
     </h1>
     <img src="https://th.bing.com/th/id/R.6bc1210c900f5c2a6c4fdf23aa26fb27?rik=X%2f4WKiLf1IRMdg&pid=ImgRaw&r=0"
-        alt="banana bread" width="250px" height="400px">
+        alt="banana bread" width="250" height="400">
     <h2>Origin of Banana bread</h2>
     <p>Banana bread is a type of sweet bread or cake made from mashed bananas.It is often a moist and sweet quick
         bread but some recipes are yeast raised, <cite>wiki</cite>. To be honest I don't know the origin yet</p>
