--- a/recipes/vegetable-soup.html
+++ b/recipes/vegetable-soup.html
@@ -12,7 +12,7 @@
         Vegetable Soup
     </h1>
     <img src="https://www.nairaland.com/attachments/8457606_edikaikongnpgomc_jpeg071839a9f27c8c643e2d87351844ef9e"
-        alt="Vegetable soup with Eba in a plate" width="400px" height="400px">
+        alt="Vegetable soup with Eba in a plate" width="400" height="400">
     <h2>About Vegetable Soup</h2>
     <p>This is Nigerian cuisine also known as Edikang Ikong. This is a nutritious, tasty, leafy green vegetable soup
         from Southern Nigeria. It is made with fluted pumpkin leaves and waterleaf. The original version of this soup is
