--- a/recipes/spicy-fried-chicken.html
+++ b/recipes/spicy-fried-chicken.html
@@ -12,7 +12,7 @@
         Spicy Fried Chicken
     </h1>
     <img src="https://th.bing.com/th/id/OIP.YQS6wDISJIGgfylW5Fy5ZQAAAA?rs=1&pid=ImgDetMain" alt="Spicy Fried Chicken"
-        width="200px" height="200px">
+        width="200" height="200">
     <h2>About Spicy Fried Chicken</h2>
     <p>Chicken is my favorite type of meat and also food. Anything with it sign my mouth up, in stew, shawarma, pie. I
         love me some chickens and this on of my solo
